--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Background Generator</h1>
-    <h2>Current CSS Background</h2>
+    <h2>this is the background</h2>
     <h3></h3>
     <script type="text/javascript" src="script.js"></script>
 </body>
